// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Domain should call addCommunityDomain from mapDispatchToProps 1`] = `
Object {
  "payload": "domain",
  "type": "CreateCommunity/ADD_COMMUNITY_DOMAIN",
}
`;

exports[`Domain should call fetchCommunityExists from mapDispatchToProps 1`] = `
Object {
  "graphql": Object {
    "query": "
        query ($slug: String) {
          communityExists (slug: $slug) {
            exists
          }
        }
      ",
    "variables": Object {
      "slug": "slug",
    },
  },
  "type": "CreateCommunity/FETCH_COMMUNITY_EXISTS",
}
`;

exports[`Domain should call goHome from mapDispatchToProps 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`Domain should call goToNextStep from mapDispatchToProps 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/create-community/template",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`Domain should call goToPreviousStep from mapDispatchToProps 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/create-community/name",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;
